# fragNet

./: .gitignore  CMakeLists.txt  CRYPTOPP_FIX_EXPLAINED.md  GITHUB_BUILD_FIX.md  GITHUB_SETUP_GUIDE.md  NETWORK_BINDING_FIX.md  QUICK_START.md  build-linux.sh  build-windows.bat  cmake_unix_64b.sh  install-deps-debian.sh  install-deps-windows.ps1  start_gc_server.bat  start_gc_server.sh
.github/workflows/: build.yml
gc_server/: CMakeLists.txt  discord_notifier.cpp  discord_notifier.hpp  gameserver_manager.cpp  gameserver_manager.hpp  gc_message.cpp  gc_message.hpp  inventory.cpp  inventory.hpp  item_schema.cpp  item_schema.hpp  keyvalue.cpp  keyvalue_english.cpp  keyvalue_english.hpp  logger.cpp  logger.hpp  main.cpp  main.hpp  matchmaking_manager.cpp  matchmaking_manager.cpp.backup  matchmaking_manager.hpp  matchmaking_manager.hpp.backup  matchmaking_manager_improved.hpp  matchmaking_manager_improved_sample.cpp  mysql_database.cpp  networking.cpp  networking.hpp  networking_inventory.cpp  networking_inventory.hpp  networking_matchmaking.cpp  networking_matchmaking.hpp  networking_users.cpp  networking_users.hpp  platform.hpp  random.cpp  stdafx.h  steam_network_message.cpp  steam_network_message.hpp  tcp_networking.cpp  tcp_networking.hpp
items/: csgo_english.txt  items_game.txt  unusual_loot_lists.txt
protobufs/: cc_gcmessages.proto
